menu 100% fixed out of bounds error

--- a/resource/style/main.css
+++ b/resource/style/main.css
@@ -34,6 +34,18 @@ li {
 
 }
 
+.pointer {
+
+    cursor:                 pointer;
+
+}
+
+.default-cursor {
+
+    cursor:                 default;
+
+}
+
 #nav {
 
     background-color:       #ffffff;
@@ -146,6 +158,7 @@ li {
         height: 48px;
         line-height: 48px;
         padding: 0 20px;
+
     }
 
         #menu ul li svg {
